--- a/package.json
+++ b/package.json
@@ -9,30 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.0.0",
+    "@react-three/drei": "^9.100.0",
+    "@react-three/fiber": "^8.15.0",
+    "@types/three": "^0.160.0",
+    "clsx": "^2.0.0",
+    "framer-motion": "^11.0.0",
     "next": "14.2.3",
+    "next-sanity": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "framer-motion": "^11.0.0",
-    "three": "^0.160.0",
-    "@types/three": "^0.160.0",
-    "@react-three/fiber": "^8.15.0",
-    "@react-three/drei": "^9.100.0",
-    "sanity": "^3.0.0",
-    "next-sanity": "^9.0.0",
-    "@portabletext/react": "^3.0.0",
     "react-icons": "^5.0.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0"
+    "sanity": "^3.0.0",
+    "tailwind-merge": "^2.0.0",
+    "three": "^0.160.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.22",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "typescript": "^5"
   }
 }
-
