--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "three": "^0.160.0"
   },
   "devDependencies": {
+    "@sanity/vision": "^4.19.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
