--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/three": "^0.160.0",
     "clsx": "^2.0.0",
     "framer-motion": "^11.0.0",
+    "microcms-js-sdk": "^3.2.0",
     "next": "14.2.3",
     "next-sanity": "^9.0.0",
     "react": "^18",
