--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.0",
     "sanity": "^3.0.0",
+    "stripe": "^16.12.0",
     "tailwind-merge": "^2.0.0",
     "three": "^0.160.0"
   },
