--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@portabletext/react": "^3.0.0",
     "@react-three/drei": "^9.100.0",
     "@react-three/fiber": "^8.15.0",
+    "@supabase/supabase-js": "^2.90.1",
     "@types/three": "^0.160.0",
     "clsx": "^2.0.0",
     "framer-motion": "^11.0.0",
